[metadata]
name = trendstracker
description = fetches trending topics from trends24 website
version = 0.0.0

[build-system] 
requires = [
    "setuptools>=45", 
    "setuptools_scm>=6.2",
    "wheel"
]

[options]
include_package_data = True
packages = find:
packages_dir = 
    =src

[options.packages.find]
where = src

[options.extras_require]
testing = 
    setuptools 
    pytest

[tool:pytest]
norecursedirs =
    dist
    build
    .tox
testpaths = tests
